# NullCrypt

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  deny.toml  test_extract.ps1
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/crypto-core/: Cargo.toml
crates/crypto-core/src/: lib.rs
crates/fs-abstraction/: Cargo.toml
crates/fs-abstraction/src/: lib.rs
crates/vault-engine/: Cargo.toml
crates/vault-engine/src/: lib.rs
crates/vault-engine/tests/: integration_test.rs
docs/: BUILDING.md
scripts/: verify.ps1  verify.sh
