[workspace]
members = [
    "crates/crypto-core",
    "crates/vault-engine",
    "crates/fs-abstraction",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["etrnkz"]
repository = "https://github.com/etrnkz/secure-vault"

[workspace.dependencies]
# Cryptography (audited)
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Testing
proptest = "1.4"
