[package]
name = "vault-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vault-cli"
path = "src/main.rs"

[dependencies]
vault-engine = { path = "../vault-engine" }
crypto-core = { path = "../crypto-core" }
clap = { version = "4.4", features = ["derive"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rpassword = "7.3"
