[package]
name = "crypto-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true
subtle.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
