[package]
name = "fs-abstraction"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.14"

[target.'cfg(target_os = "macos")'.dependencies]
fuser = "0.14"

[target.'cfg(target_os = "windows")'.dependencies]
# Dokan support would go here
# dokan = "0.5"
