[package]
name = "fs-abstraction"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
fuse = ["dep:fuser"]

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
fuser = { version = "0.17", optional = true }
